<resources>
    <string name="app_name">generic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="agenda">Agenda</string>
    <string name="horarios">Horarios</string>
    <string name="perfil">Mi Cuenta</string>
    <string name="cursos">Cursos</string>
    <string name="tareas">Tareas</string>
    <string name="recordatorios">Recordatorio</string>
    <string name="ayuda">Ayuda</string>

    <!--Login Activity String-->
    <string name="welcomelogin">Generic</string>
    <string name="emaillogin">Email</string>
    <string name="passwordlogin">Contraseña</string>
    <string name="login">Login</string>
    <string name="forgetpass">Contraseña olvidada</string>
    <string name="blmpunyakun">No tienes cuenta</string>
    <string name="loginor">O iniciar sesión con</string>
    <string name="googlelogin">Google Login</string>

    <string name="subject">Curso</string>
    <string name="teacher">Catedratico</string>
    <string name="room">Salon</string>
    <string name="time">Time</string>
    <string name="cursos_dash">si_cursos</string>
    <string name="notas_dash">si_notas</string>
    <string name="tareas_dash">si_tareas</string>
    <string name="m_dashboard">Dashboard</string>
    <string name="m_agenda">Agenda</string>
    <string name="m_cursos">Cursos</string>
    <string name="m_horarios">Horarios</string>
    <string name="m_tareas">Tareas</string>
    <string name="m_recordatorios">Recordatorios</string>
    <string name="m_ayuda">Ayuda</string>
    <string name="pendientes">Pendientes</string>
    <string name="nueva_tarea_tittle">Nueva Tarea</string>
    <string name="titulo_tarea">Titulo</string>
    <string name="descripcion_tarea">Descripción</string>
    <string name="nueva_nota">Nueva Nota</string>

    <string name="title_activity_portal">PortalActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">settings</string>
    <string name="mensaje_eleminacion_exitoso">Eliminado Exitosamente</string>
    <string name="mensaje_eleminacion_fallido">Se ah producido un error al momento de eliminar</string>
    <string name="titulo_grupos">Grupos</string>
    <string name="titulo_tareas">Tareas</string>
    <string name="titulo_notas">Notas</string>
</resources>
